--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1 class="text-center m-4">Api store</h1>
 
-  <main class="container d-flex flex-wrap">
+  <main class="container d-flex flex-wrap justify-content-center">
 
   </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
